fixed spacing for website optimization

--- a/stripit/dealme.css
+++ b/stripit/dealme.css
@@ -33,9 +33,7 @@
                                   }
                                   
 header {
-
 	background: rgb(165,45,165) radial-gradient(125% 150%, rgb(165,45,165), black);
-
 	width: 100%;
 	height: 76px;
 	position: fixed;
@@ -43,28 +41,20 @@ header {
 	left: 0;
 	border-bottom: 4px solid black;
     z-index: 100;
-            
-
-
 }
 
   a {
-
 	color: whitesmoke;
 	text-decoration: none;
     letter-spacing: 2px;
     margin-bottom: 20px;
-
 }
 
 a:hover {
-
     color: rgb(39,4,85);
-
 }
 
 #logo{
-
 	float: left;
 	width: 300px;
 	height: 60px;
@@ -80,55 +70,42 @@ img {
   }
 
 nav {
-
 	float: right;
 	padding: 20px;	
-
 }
 
 #menu-icon {
-
 	display: hidden;
 	width: 40px;
 	height: 40px;
     transition: all .2s ease-in-out;
 }
   
-
-
-
 a:hover#menu-icon {
-
 	background-color: rgb(39,4,85);
     border-radius: 4px 4px 0 0;
     transform: scale(1.5);
-
 }
 
 ul {
 
     list-style: none;
     margin-top: -6.5px;
-
 }
 
 li {
-
 	display: inline-block;
 	float: none;
     padding: 10px;
     font-family: 'Impact', 'Franklin Gothic Medium', 'Anton', 'Open Sans', Arial, sans-serif;
     color: whitesmoke;
-
-
 }
 
 .teaseme {
     font-size: 20px;
 }
 .teaseme:hover {
-    font-size: 140%;
-    
+    font-size: 140%;  
 }
 
 .dirtydice {
@@ -145,11 +122,8 @@ li {
     font-size: 140%;
 }
 
-
 .current {
-
 	color: whitesmoke;
-
 }
 .btn {
 	margin-bottom: 16px;
@@ -189,7 +163,6 @@ li {
 	background-color: rgb(39, 4, 85);
     overflow-y: auto;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-
 }
 
 body {
@@ -309,16 +282,12 @@ body {
     color: #ff00dc;
     background-image: url("clubs.png");
     background-size: 2em;
-
 }
-
 
 .card__front.diamonds {
     color: whitesmoke;    
     background-image: url("diamond.png");
     background-size: 2em;    
-    
-
 }
 
 .card__front.hearts {
@@ -383,21 +352,13 @@ body {
 	margin: 0;
 }
 
-
-
 @media only screen and (max-width: 700px) {
-
-
 	header {
-
-		position: absolute;
-
+	position: absolute;
 	}
 
 	#menu-icon {
-
-		display:inline-block;
-
+	display:inline-block;
 	}
 
       .bar {
@@ -409,11 +370,9 @@ body {
     transition: 0.4s ease;
     padding-bottom:1px;
     margin-top: 5px;
-   
     }
 
 	nav ul, nav:active ul { 
-
 		display: none;
 		position: absolute;
 		padding: 20px;
@@ -423,22 +382,17 @@ body {
 		top: 60px;
 		width: 50%;
 		border-radius: 4px 0 4px 4px;
-
 	}
 
 	nav li {
-
 		text-align: center;
 		width: 100%;
 		padding: 10px 0;
 		margin: 0;
-
 	}
 
 	nav:hover ul {
-
-		display: block;
-
+display: block;
     }
 
 .card__front {
@@ -454,26 +408,24 @@ body {
 }
 
 .card__front.spades {
-    color: #ff00dc;
-    
+	color: #ff00dc;
+	background-image: none;     
 }
 
 .card__front.clubs {
-    color: #ff00dc;
-   
-
+	color: #ff00dc;
+	background-image: none;     
 }
 
 
 .card__front.diamonds {
-    color: whitesmoke;    
-     
+	color: whitesmoke;
+	background-image: none;     
     
-
 }
 
 .card__front.hearts {
-    color: whitesmoke;    
-   
+	color: whitesmoke; 
+	background-image: none;     
 }
 }
